--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/cards-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guess the city flag!</title>
+    <title>CityFlags | Browse, learn and quiz flags knowledge</title>
   </head>
   <body>
     <div id="root"></div>
